fix the press button then jump to top issue

--- a/index.css
+++ b/index.css
@@ -113,7 +113,7 @@ text.yearText{
 }
 
 rect:hover {
-    fill: orange;
+    fill: #fec44f;
 }
 
 #tooltip {
